# stock-order-api

./: .env.example  .gitignore  README.md  plan-account.md  plan-realtime.md  plan.md  pyproject.toml  儀表板串接需求說明.md
.github/skills/stock-order-api/: SKILL.md
docs/: fubon-api-overview.md  fubon-credentials-guide.md  realtime-guide.md
log/: client.log.20260421  notify.log.20260421  program.log.20260421
src/stock_order_api/: __init__.py  __main__.py  account_cli.py  config.py  logging_setup.py  quote_cli.py
src/stock_order_api/api/: __init__.py  __main__.py  app.py  deps.py
src/stock_order_api/api/routers/: account.py  auth.py  orders.py  realtime.py
src/stock_order_api/audit/: __init__.py  store.py
src/stock_order_api/fubon/: __init__.py  cert.py  client.py  errors.py  stock_account.py  stock_order.py  symbol_names.py
src/stock_order_api/gui/: app.py  login_dialog.py  main_window.py
src/stock_order_api/gui/pages/: order_page.py  quote_page.py  table_page.py
src/stock_order_api/realtime/: __init__.py  client.py  errors.py  models.py  stats.py  subscription.py
src/stock_order_api/utils/: cache.py  csv_export.py  ringbuf.py
tests/: conftest.py  test_account_mapper.py  test_cache.py  test_config.py  test_login_dialog.py  test_main_window.py  test_quote_cli.py  test_quote_page.py  test_realtime_client.py  test_realtime_models.py  test_realtime_subscription.py  test_ringbuf.py  test_stats.py  test_stock_account.py  test_stock_order.py
